; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-encoder.c_obs_encoder_packet_create_instance.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-encoder.c_obs_encoder_packet_create_instance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.encoder_packet = type { i64, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_encoder_packet_create_instance(%struct.encoder_packet* %0, %struct.encoder_packet* %1) #0 {
  %3 = alloca %struct.encoder_packet*, align 8
  %4 = alloca %struct.encoder_packet*, align 8
  %5 = alloca i64*, align 8
  store %struct.encoder_packet* %0, %struct.encoder_packet** %3, align 8
  store %struct.encoder_packet* %1, %struct.encoder_packet** %4, align 8
  %6 = load %struct.encoder_packet*, %struct.encoder_packet** %3, align 8
  %7 = load %struct.encoder_packet*, %struct.encoder_packet** %4, align 8
  %8 = bitcast %struct.encoder_packet* %6 to i8*
  %9 = bitcast %struct.encoder_packet* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %8, i8* align 8 %9, i64 16, i1 false)
  %10 = load %struct.encoder_packet*, %struct.encoder_packet** %4, align 8
  %11 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = add i64 %12, 8
  %14 = call i64* @bmalloc(i64 %13)
  store i64* %14, i64** %5, align 8
  %15 = load i64*, i64** %5, align 8
  %16 = getelementptr inbounds i64, i64* %15, i64 1
  %17 = bitcast i64* %16 to i8*
  %18 = load %struct.encoder_packet*, %struct.encoder_packet** %3, align 8
  %19 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %18, i32 0, i32 1
  store i8* %17, i8** %19, align 8
  %20 = load i64*, i64** %5, align 8
  store i64 1, i64* %20, align 8
  %21 = load %struct.encoder_packet*, %struct.encoder_packet** %3, align 8
  %22 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %21, i32 0, i32 1
  %23 = load i8*, i8** %22, align 8
  %24 = load %struct.encoder_packet*, %struct.encoder_packet** %4, align 8
  %25 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %24, i32 0, i32 1
  %26 = load i8*, i8** %25, align 8
  %27 = load %struct.encoder_packet*, %struct.encoder_packet** %4, align 8
  %28 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = call i32 @memcpy(i8* %23, i8* %26, i64 %29)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64* @bmalloc(i64) #2

declare dso_local i32 @memcpy(i8*, i8*, i64) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
